--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,11 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /
+RewriteBase /offtrack/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . offtracktravel/index.php [L]
+RewriteRule . /offtrack/index.php [L]
 </IfModule>
+
+# END WordPress
