--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,7 @@ RewriteBase /offtrack/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteRule . /offtracktravel/index.php [L]
 </IfModule>
 
 # END WordPress
