--- a/.htaccess
+++ b/.htaccess
@@ -7,5 +7,8 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /offtracktravel/index.php [L]
 </IfModule>
-
+php_value upload_max_filesize 8M
+php_value post_max_size 8M
+php_value max_execution_time 300
+php_value max_input_time 300
 # END WordPress
